# whysoserial-cpp

./: CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: cmake-multi-platform.yml
py/: whyoserial-cpp.py  whyoserial-wrapper.py  yoserial-cpp-wrapper.py  yoserial-cpp.py
src/: whysoserial-cpp.cpp  ysoserial-cpp.cpp  ysoserial.cpp
